syntax = "proto3";
package coreum.asset.ft.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/CoreumFoundation/coreum/x/asset/ft/types";
option (gogoproto.goproto_getters_all) = false;

// MsgEnableIBCRequest means that sender wants to enable IBC for the token.
message MsgEnableIBCRequest {
  string sender = 1;
  string denom = 2;
}

// MsgEnableIBCExecutor is executed by the delay module when it's time to enable IBC.
message MsgEnableIBCExecutor {
  string denom = 1;
}
